[gd_scene load_steps=10 format=3 uid="uid://blkideq7hngfs"]

[ext_resource type="PackedScene" uid="uid://lvenp4j0jse0" path="res://Prefabs/Elements/CheckBox.tscn" id="1"]
[ext_resource type="Script" uid="uid://ccipi0rmo1klm" path="res://Prefabs/Elements/SaloryCalculation.gd" id="2"]
[ext_resource type="StyleBox" path="res://Prefabs/Styles/Panel/SettingPanel.tres" id="3"]
[ext_resource type="PackedScene" path="res://Prefabs/Elements/ValueBox.tscn" id="4"]
[ext_resource type="FontFile" path="res://Prefabs/Styles/Fonts/Size30Bold.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://d0joiy0t111xe" path="res://Prefabs/Elements/OptionBox.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://d2itk7kvsgrbj" path="res://Assets/Flags/israel.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dmf5uptcklkdo" path="res://Assets/Flags/united-states.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dvl3bjomcnaf8" path="res://Assets/Flags/russia.png" id="9"]

[node name="SaloryCalculation" type="Panel"]
custom_minimum_size = Vector2(0, 180)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
theme_override_styles/panel = ExtResource("3")
script = ExtResource("2")

[node name="Activate" parent="." instance=ExtResource("1")]
layout_mode = 0
anchor_right = 0.0
offset_left = 20.0
offset_right = -20.0
theme_override_fonts/font = ExtResource("5")

[node name="SalaryBox" parent="." instance=ExtResource("4")]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 142.0
offset_bottom = 20.0
vertical_alignment = 1
MinMax = Vector2(1, 99999)
HasArrows = false
FrontText = "Salary /h"

[node name="TravelBox" parent="." instance=ExtResource("4")]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 21.0
offset_right = 133.0
offset_bottom = 76.0
text = "300"
vertical_alignment = 1
MinMax = Vector2(0, 999999)
InisialValue = 300.0
HasArrows = false
FrontText = "Bonus /m"

[node name="Currency" parent="." instance=ExtResource("6")]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -41.0
offset_right = 357.0
offset_bottom = 20.0
item_count = 3
popup/item_0/text = "₪"
popup/item_0/icon = ExtResource("7")
popup/item_1/text = "$"
popup/item_1/icon = ExtResource("8")
popup/item_1/id = 1
popup/item_2/text = "₽"
popup/item_2/icon = ExtResource("9")
popup/item_2/id = 2

[node name="CurrentCurrencyIcon" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.0
offset_top = 6.0
offset_right = 287.0
offset_bottom = 86.0
expand_mode = 1
stretch_mode = 6

[connection signal="OnToggle" from="Activate" to="." method="_on_CheckBox_OnToggle"]
[connection signal="UpdatedVar" from="SalaryBox" to="." method="_on_ValueBox_UpdatedVar"]
[connection signal="UpdatedVar" from="TravelBox" to="." method="_on_TravelBox_UpdatedVar"]
[connection signal="gui_input" from="CurrentCurrencyIcon" to="." method="_on_CurrentCurrencyIcon_gui_input"]
